fix: footer alignment

--- a/src/components/footer-section/footer-section.module.css
+++ b/src/components/footer-section/footer-section.module.css
@@ -12,6 +12,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    margin: 0 auto;
   }
 }
 
